# vix-ai-nn

./: CHANGELOG.md  CMakeLists.txt  README.md
include/vix/ai/nn/: Network.hpp
include/vix/ai/nn/Layers/: Conv2D.hpp  Dense.hpp  Transformer.hpp
include/vix/ai/nn/Optimizers/: Adam.hpp  SGD.hpp
src/: Network.cpp
src/Layers/: Conv2D.cpp  Dense.cpp  Transformer.cpp
src/Optimizers/: Adam.cpp  SGD.cpp
tests/: CMakeLists.txt  layers_tests.cpp  network_tests.cpp  nn_smoke_test.cpp  optimizers_tests.cpp
